# accumulate

./: Android.txt  adb端口被占用.txt  buildroot学习总结.txt  color.sh  copy_from_linux_2_remote_windows.txt  cscope+vim.txt  git_study.txt  onekeylock3_zip.ENC  remote copy from linux to windows.txt  serial_port_zip.ENC  small_tech.txt  small_tech_txt.ENC  web_home_zip.ENC
Buildroot/: Buildroot_manual.txt  buildroot学习总结.txt
Buildroot/test/: Config.in  test.mk
Buildroot/test-0.01/: Makefile  test  test.c
Linux/: 20个最受欢迎的Linux命令.txt  怎样配置内核.txt  指定文件来config内核.txt
cscope-vim/: _vimrc  cscope+vim.txt
diag/: .gitignore  Makefile  common.h  csapp.c  diag.WK3  main.c  serial_port.c
online_upgrade/: Makefile  Makefile.am  all-custom.rar  configure.ac  online-upgrade_0.0.bb  online_upgrade.c  online_upgrade.h
work/: Notice.txt  parse_cfg_zip.ENC
